terraform/ecs.tf
resource "aws_ecs_cluster" "main" {n  name = "${var.project_name}-${var.environment}-cluster"nn  setting {n    name  = "containerInsights"n    value = "enabled"n  }nn  tags = {n    Name = "${var.project_name}-${var.environment}-cluster"n  }n}nnresource "aws_ecs_task_definition" "python_service" {n  family                   = "${var.project_name}-${var.environment}-python-service"n  network_mode             = "awsvpc"n  requires_compatibilities = ["FARGATE"]n  cpu                     = 256n  memo [...]
