terraform/rds.tf
resource "aws_db_subnet_group" "main" {n  name       = "${var.project_name}-${var.environment}-db-subnet-group"n  subnet_ids = module.vpc.private_subnetsnn  tags = {n    Name = "${var.project_name}-${var.environment}-db-subnet-group"n  }n}nnresource "aws_db_instance" "main" {n  identifier = "${var.project_name}-${var.environment}-db"nn  engine         = "mysql"n  engine_version = "8.0.35"n  instance_class = "db.t3.micro"nn  allocated_storage     = 20n  max_allocated_storage = 100n  storage_type  [...]
